# agentic-tdd

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  interval_intersection.py  intervals.py  mkdocs.yml  pyproject.toml  solution.py
constraints/: orchestrator.yaml  profiles.yaml
docs/: configuration.md  constraints.md  index.md  spec-format.md  tutorial.md  workflow.md
examples/: intervals.yaml
examples/intervals/: spec.yaml
orchestrator/: __main__.py  cli_runner.py  config.py  constraint_checks.py  constraint_loader.py  critic.py  display.py  loop.py  models.py  plan_generator.py  prompts.py  sandbox.py  session.py  spec_intake.py  test_generator.py
src/: __init__.py
tests/: conftest.py  test_cli_runner.py  test_config.py  test_constraint_checks.py  test_constraint_loader.py  test_critic.py  test_display.py  test_llm_integration.py  test_loop.py  test_main.py  test_models.py  test_plan_generator.py  test_prompts.py  test_sandbox.py  test_self_constraints.py  test_session.py  test_spec_intake.py  test_test_generator.py
